src/blocks/video-maxi/style.scss
.maxi-video-block {
	display: flex;
	justify-content: center;
	align-items: center;
	z-index: revert;

	&__popup-wrapper {
		top: 0;
		bottom: 0;
		left: 0;
		right: 0;
		position: fixed;
		z-index: 999;

		display: flex;
		flex-direction: column;
		justify-content: center;
		align-items: center;

		cursor: auto;
	}

	&__video-container {
		position: relative;
		display: flex;
		align-items: center;
		justify-content: center;
		width: 100%;
		&--popup {
			width: 50%;
			&--zoom-out {
				animation: popup-zoom-out 0.1s ease-out;
			}
			&--zoom-in {
				animation: popup-zoom-in 0.1s ease-out;
			}
		}
	}

	&__video-player {
		width: 100%;
		height: 100%;
		object-fit: cover;
		margin: 1px;
	}

	&__overlay {
		position: relative;
		display: grid;
		grid-template-areas: 'video-overlay';
		place-items: center;

		width: 100%;
		height: 100%;

		overflow: hidden;
		cursor: pointer;
	}

	&__placeholder {
		z-index: 1;
		width: 100%;
	}

	&__placeholder,
	&__overlay-image {
		display: block;
		grid-area: video-overlay;

		min-width: 0;
		min-height: 0;
		max-height: 100%;
		margin: auto;
		object-fit: cover;
	}

	&__overlay-background,
	&__select-overlay {
		position: absolute;
		top: 0;
		left: 0;
		bottom: 0;
		right: 0;
		z-index: 1;
	}

	&__select-overlay {
		background: transparent;
	}

	&__play-button {
		position: relative;
		z-index: 2;
		grid-area: video-overlay;
	}

	&__close-button {
		position: absolute;

		cursor: pointer;
	}

	&__video-container &__close-button {
		transform: translate(100%, -100%);
	}

	&__placeholder {
		display: flex;
		align-items: center;
		justify-content: center;
	}
}
.toolbar-item__video-url__popover {
	display: flex;
	column-gap: 10px;
	align-items: center;
	padding-bottom: 8px;

	.maxi-base-control__field {
		margin-bottom: 0;
	}
}
.toolbar-item__video-url__popover,
.maxi-video-sidebar-url {
	label {
		margin-right: 8px;
	}
	input {
		min-width: 200px;
		border: 1px solid var(--maxi-grey-1-color) !important;
		padding: 2px 10px !important;
		color: var(--maxi-grey-5-color) !important;
		font-size: 12px;
	}
}

@keyframes popup-zoom-out {
	0% {
		transform: scale(1.2);
	}
	100% {
		transform: scale(1);
	}
}

@keyframes popup-zoom-in {
	0% {
		transform: scale(0.8);
	}
	100% {
		transform: scale(1);
	}
}
@media all and (max-width: 1024px) {
	.maxi-video-block__video-container--popup {
		width: 90%;
	}
}

